# risk_first_trading

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
config/: engine.yaml  expansion_pools.json  hermes_policy.yaml  meta_optimization.json  policy.yaml  risk_limits.yaml  scaling_profiles.json  strategies.yaml
dashboard/: README.md  app.py
docs/: 02_strategy_acceptance_retirement.md  03_hermes_v2_checklist.md  04_live_broker_migration.md  05_paper_trading_readiness.md  06_operational_runbook.md  07_hermes_world_model.md  08_hermes_conflict_resolution.md  09_hermes_position_sizing.md  10_hermes_v2_state_flow.md  11_shadow_evaluation.md  12_agent_roles.md  13_experiment_results.md  14_veto_experiment_results.md  15_confidence_audit_results.md  16_confidence_semantics_results.md  17_hermes_v2.1_semantics.md  18_combined_semantics_results.md  19_paper_trading_observations.md  Profitability_Phase_Mandate.md  index.html
scripts/: analyze_family_attribution.py  analyze_regime_family_matrix.py  analyze_shadow_live.py  analyze_strategy_comparison.py  analyze_stress_correlation.py  check_timestamps.py  combined_semantics_experiment.py  confidence_audit.py  confidence_semantics_experiment.py  daily_report.py  fetch_15m.py  fetch_historical.py  fetch_shadow_data.py  ftmo_tv_checklist.py  ftmo_tv_monitor.py  generate_adaptation_report.py  generate_guide_metadata.py  generate_phase21_report.py  operational_checklist.py  phase_16_5_invariance.py  run_adaptation_backtest.py  run_alpaca_health_test.py  run_demo.py  run_engine.py  run_ftmo_dryrun.py  stress_test.py  (+9 more)
(+153 files in other folders)
