[project]
name = "hermes-trading"
version = "0.1.0"
description = "Hermes-centric black-box trading framework"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0",
    "ib_insync>=0.9.86",
    "ta>=0.11.0",
]

[project.scripts]
hermes-demo = "scripts.run_demo:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
